<resources>
    <string name="app_name">TextBlock</string>
    <string name="RememberMyAccount">RememberMyAccount</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="accountNameEditText_hint">Email/Phone</string>
    <string name="passwordEditText_hint">Password</string>

    <string name="title_activity_taken_photo">TakenPhotoActivity</string>
    <string name="lock_your_phone_Button">Lock Your Phone</string>
    <string name="textView_status">Your phone has been locked, \nPlease focus on driving</string>
    <string name="button_I_want_to_be_unlocked">I want to be unlocked</string>
    <string name="button_I_want_to_be_unlocked_2">I want to be unlocked 2</string>

</resources>
